--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "11.0.0"
+    "@emotion/babel-plugin": "11.0.0",
+    "@types/react": "^17.0.38",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@emotion/react": "11.1.1",
