--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@emotion/react": "11.1.1",
     "@emotion/styled": "11.0.0",
+    "graphql": "^16.2.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
