--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.5.6",
     "@emotion/react": "11.1.1",
     "@emotion/styled": "11.0.0",
+    "cross-fetch": "^3.1.4",
     "graphql": "^16.2.0",
     "next": "latest",
     "react": "^17.0.2",
