--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-fetch": "^3.1.4",
     "graphql": "^16.2.0",
     "next": "latest",
+    "pokeapi-typescript": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
