--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
-    "@emotion/react": "11.1.1",
-    "@emotion/styled": "11.0.0",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "cross-fetch": "^3.1.4",
+    "framer-motion": "^5.5.6",
     "graphql": "^16.2.0",
     "next": "latest",
     "pokeapi-typescript": "^2.1.0",
