--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^5.5.6",
     "graphql": "^16.2.0",
     "next": "latest",
+    "nextjs-progressbar": "^0.0.13",
     "pokeapi-typescript": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
