--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "serve": "next build && next start"
+    "serve": "next build && next start",
+    "test": "jest --watch"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.0.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.38",
+    "babel-jest": "^27.4.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.7",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.5.4"
   },
   "dependencies": {
