--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "next build",
     "start": "next start",
     "serve": "next build && next start",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll=false"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.0.0",
