--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "next build",
     "start": "next start",
     "serve": "next build && next start",
-    "test": "jest --watchAll=false"
+    "test": "jest --watchAll=false",
+    "test:coverage": "npm test -- --coverage",
+    "test:badges": "npm run test:coverage  && jest-coverage-badges"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.0.0",
@@ -26,6 +28,7 @@
     "cross-fetch": "^3.1.4",
     "framer-motion": "^5.5.6",
     "graphql": "^16.2.0",
+    "jest-coverage-badges": "^1.1.2",
     "next": "latest",
     "next-pwa": "^5.4.4",
     "nextjs-progressbar": "^0.0.13",
